--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,8 @@ install:
   - "pip install -r requirements.txt"
   - sudo apt-get install texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended texlive-xetex
 script:
-  -snakemake Snakefile.AllSongs
-  -snakemake Snakefile.TP2011
-  -snakemake Snakefile.TP2012
-  -snakemake Snakefile.TP2013
+  -snakemake -s Snakefile.AllSongs
+  -snakemake -s Snakefile.TP2011
+  -snakemake -s Snakefile.TP2012
+  -snakemake -s Snakefile.TP2013
   
