--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,10 @@ python:
 # command to install dependencies
 install:
   - "pip install -r requirements.txt"
-  - sudo apt-get install texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended texlive-xetex
+  - "sudo apt-get install texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended texlive-xetex"
 script:
-  -snakemake -s Snakefile.AllSongs
-  -snakemake -s Snakefile.TP2011
-  -snakemake -s Snakefile.TP2012
-  -snakemake -s Snakefile.TP2013
+  - "snakemake -s Snakefile.AllSongs"
+  - "snakemake -s Snakefile.TP2011"
+  - "snakemake -s Snakefile.TP2012"
+  - "snakemake -s Snakefile.TP2013"
   
