--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ python:
   - "3.4"
 # command to install dependencies
 before_install:
-  - "sudo (ln -s /usr/share/i18n/SUPPORTED /var/lib/locales/supported.d/all;sudo locale-gen)"
+  - "sudo (ln -s /usr/share/i18n/SUPPORTED /var/lib/locales/supported.d/all;locale-gen)"
 install:
   - "pip install -r requirements.txt"
   - "sudo apt-get install texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended texlive-xetex"
