--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,11 @@ python:
   - "3.3"
   - "3.4"
 # command to install dependencies
-before_install:
-  - "sudo ln -s /usr/share/i18n/SUPPORTED /var/lib/locales/supported.d/all"
-  - "sudo locale-gen"
 install:
   - "pip install -r requirements.txt"
-  - "sudo apt-get install texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended texlive-xetex"
+  - "sudo apt-get install texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended texlive-xetex iczech language-pack-cs"
+  - "sudo ln -s /usr/share/i18n/SUPPORTED /var/lib/locales/supported.d/all"
+  - "sudo locale-gen"
 script:
   - "snakemake -s Snakefile.AllSongs"
   - "snakemake -s Snakefile.TP2011"
