Print shell commands

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,17 +6,14 @@ python:
   - "3.2"
   - "3.3"
   - "3.4"
-# command to install dependencies
-# - "sudo apt-get install texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended texlive-xetex iczech language-pack-cs"
-
 install:
   - "pip install -r requirements.txt"
   - "sudo apt-get install texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended texlive-xetex"
   - "sudo ln -s /usr/share/i18n/SUPPORTED /var/lib/locales/supported.d/all"
   - "sudo locale-gen"
 script:
-  - "snakemake -s Snakefile.AllSongs"
-  - "snakemake -s Snakefile.TP2011"
-  - "snakemake -s Snakefile.TP2012"
-  - "snakemake -s Snakefile.TP2013"
+  - "snakemake -p -s Snakefile.AllSongs"
+  - "snakemake -p -s Snakefile.TP2011"
+  - "snakemake -p -s Snakefile.TP2012"
+  - "snakemake -p -s Snakefile.TP2013"
   
