--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,7 @@ script:
   - "snakemake -p -s Snakefile.TP2011"
   - "snakemake -p -s Snakefile.TP2012"
   - "snakemake -p -s Snakefile.TP2013"
+  - "snakemake -p -s Snakefile.TP2015"
   - "snakemake -p -s Snakefile.AllSongs"
+  - "snakemake -p -s Snakefile.TPBAND"
   
