--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - "pip install -r requirements.txt"
   - "sudo apt-get install texlive-latex-recommended texlive-latex-extra texlive-fonts-recommended texlive-xetex"
   - "sudo ln -s /usr/share/i18n/SUPPORTED /var/lib/locales/supported.d/all"
-  - "sudo locale-gen"
+  - "sudo locale-gen cs_CZ.UTF-8"
 script:
   - "snakemake -p -s Snakefile.test"
   - "snakemake -p -s Snakefile.2pedro"
