--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
 addons:
   apt:
     packages:
+    - lmodern
     - texlive-latex-recommended
     - texlive-latex-extra
     - texlive-fonts-recommended
