--- a/.travis.yml
+++ b/.travis.yml
@@ -30,6 +30,7 @@ deploy:
   provider: surge
   project: "./output/"
   domain: tp-zpevnik.surge.sh
+  skip_cleanup: true
   on:
     all_branches: true
 env:
