--- a/.travis.yml
+++ b/.travis.yml
@@ -16,14 +16,7 @@ install:
 - sudo ln -s /usr/share/i18n/SUPPORTED /var/lib/locales/supported.d/all
 - sudo locale-gen cs_CZ.UTF-8
 script:
-- snakemake -p -s Snakefile.test
-- snakemake -p -s Snakefile.2pedro
-- snakemake -p -s Snakefile.TP2011
-- snakemake -p -s Snakefile.TP2012
-- snakemake -p -s Snakefile.TP2013
-- snakemake -p -s Snakefile.TP2015
-- snakemake -p -s Snakefile.AllSongs
-- snakemake -p -s Snakefile.TPBAND
+- snakemake -p -s ./zkompiluj_vse_seriove.sh
 before_deploy:
 - ./make_indexes_html.sh
 deploy:
