--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,10 @@ deploy:
   domain: tp-zpevnik.surge.sh
   skip_cleanup: true
   on:
-    all_branches: true
+    branch:
+    - master
+    - surge
+#    all_branches: true
 env:
   global:
   - secure: lZxQ9+kfyqzvmPvxLPv6FvTwGbOrAdek3tU/05me30vVb2VA8mvBj8+ELQjWvuuNEtUJ6NSAIDn0o2wntoy5uK8cA7jPMOCMUH3H1oHNxiAjJb9Pj0l14RZJ6HxVQCdTXDDlcV99AkkD5YbFNhNcLsiQO+o7FLIvXpEoS1J0HsY=
