--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ script:
 - snakemake -p -s Snakefile.AllSongs
 - snakemake -p -s Snakefile.TPBAND
 before_deploy:
-- ./make_indexes_html.sh
+- ./vygeneruj_index_surge.py > output/index.html
 deploy:
   provider: surge
   project: "./output/"
