Balicek pro pdfcrop

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
     - texlive-latex-extra
     - texlive-fonts-recommended
     - texlive-xetex
+    - texlive-extra-utils
 install:
 - pip install -r requirements.txt
 - sudo ln -s /usr/share/i18n/SUPPORTED /var/lib/locales/supported.d/all
