--- a/.travis.yml
+++ b/.travis.yml
@@ -26,7 +26,9 @@ deploy:
   github_token: "$GITHUB_TOKEN"
   local_dir: output
   on:
-    branch: master
+    branch:
+    - master
+    - lualatex
 env:
   global:
   - secure: lZxQ9+kfyqzvmPvxLPv6FvTwGbOrAdek3tU/05me30vVb2VA8mvBj8+ELQjWvuuNEtUJ6NSAIDn0o2wntoy5uK8cA7jPMOCMUH3H1oHNxiAjJb9Pj0l14RZJ6HxVQCdTXDDlcV99AkkD5YbFNhNcLsiQO+o7FLIvXpEoS1J0HsY=
