--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,30 @@
+sudo: true
 language: python
 os:
 - linux
 python:
 - '3.4'
-addons:
-  apt:
-    packages:
-    - lmodern
-    - texlive-latex-recommended
-    - texlive-latex-extra
-    - texlive-fonts-recommended
-    - texlive-xetex
-    - texlive-luatex
-    - texlive-extra-utils
-    - latexmk
+#addons:
+#  apt:
+#    packages:
+#    - lmodern
+#    - texlive-latex-recommended
+#    - texlive-latex-extra
+#    - texlive-fonts-recommended
+#    - texlive-xetex
+#    - texlive-luatex
+#    - texlive-extra-utils
+#    - latexmk
 install:
+- wget https://github.com/scottkosty/install-tl-ubuntu/raw/master/install-tl-ubuntu && chmod +x ./install-tl-ubuntu
+- sudo ./install-tl-ubuntu
+- sudo /opt/texbin/tlmgr init-usertree
+- sudo /opt/texbin/tlmgr update --all
+- sudo /opt/texbin/tlmgr update unicode-math
+- sudo /opt/texbin/tlmgr update xetex
+- sudo /opt/texbin/tlmgr update lualatex
+- "export PATH=$PATH:/opt/texbin"
+
 - pip install -r requirements.txt
 - sudo ln -s /usr/share/i18n/SUPPORTED /var/lib/locales/supported.d/all
 - sudo locale-gen cs_CZ.UTF-8
