Revert "/usr/bin/env gs => gs"
This reverts commit fc762f8b0eed37d1b6e7bea6146243414a170ca8.

--- a/output/Makefile
+++ b/output/Makefile
@@ -17,7 +17,7 @@ orizni: $(ZPEVNIKY_T)
 	(\
 	cd $$tmp;\
 	pdfcrop --margins '0 -25 0 0' 1.pdf 2.pdf;\
-	gs -sDEVICE=pdfwrite -dCompatibilityLevel=1.4 -dPDFSETTINGS=/screen -dNOPAUSE -dQUIET -dBATCH -sOutputFile=3.pdf 2.pdf;\
+	/usr/bin/env gs -sDEVICE=pdfwrite -dCompatibilityLevel=1.4 -dPDFSETTINGS=/screen -dNOPAUSE -dQUIET -dBATCH -sOutputFile=3.pdf 2.pdf;\
 	);\
 	cp $${tmp}/3.pdf $@;
 
