Oprav token pro Github pages

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,4 +32,5 @@ env:
   global:
   - secure: lZxQ9+kfyqzvmPvxLPv6FvTwGbOrAdek3tU/05me30vVb2VA8mvBj8+ELQjWvuuNEtUJ6NSAIDn0o2wntoy5uK8cA7jPMOCMUH3H1oHNxiAjJb9Pj0l14RZJ6HxVQCdTXDDlcV99AkkD5YbFNhNcLsiQO+o7FLIvXpEoS1J0HsY=
   - secure: CvGQvGyks7jQLk4LbhgyQkm+O3ycoW/Qq64Yy5BXBrHwLgeUAPgY2j10pwSlWAZ8UO37cChpe+itD0LAGJqeRAlp1KhtUgtslVqJWEZQDRyZ8HPjT+2SWJVZtFTCYr/4/fzx2Vsjl6el7I3cGLzyUbuQM9h168pxYEINePTD1As=
-  - secure: adf0i/D3Hpn8JQcof+P4V6sw/IPj1K5divUcew0X5e2dsNTr5RfIR1d9m36ikCjywJv/5SiPulxTAF2yDa9riS3AlwKSjCSBqUHCL0JjBk8N6gXkbFmBW0bqmCCoMEvLifI0R+PsqMwrNopWEVO+dArzNh+FAfzhmRtY3zx7j/c=
+  - secure: "A42/qvDY/ydYGXUIGxSgF/E3mBggpFq92trlNbn6gqh/Pbx8p5IhX4YPuLQEYe/acwACCUixN9p7XQEq8mPpaTd0cKUQYH5Smm2r+Tdc2K7BW0FuKkfFzno7fQoW2nOfMvdAsLX27E2KDbjwdNVFVvad1Qt4cJbH8ux/EvCLkDA="
+
