Pred uploadem na Github pages odstran .gitignore

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ script:
 - make
 before_deploy:
 - make -C output
+- rm .gitignore output/.gitignore
 deploy:
   provider: pages
   skip_cleanup: true
