--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ addons:
     - texlive-fonts-recommended
     - texlive-xetex
     - texlive-extra-utils
-    - texlive-lang-czech
+    - texlive-lang-czechslovak
     - ghostscript
 install:
 - pip install -r requirements.txt
